--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -130,35 +130,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/envase" />
+                    android:text="@string/envase"
+                    tools:ignore="ButtonStyle" />
 
                 <Button
                     android:id="@+id/buttonMedicamento"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/medicamento" />
+                    android:text="@string/medicamento"
+                    tools:ignore="ButtonStyle" />
 
             </LinearLayout>
-            <!--
-            <ImageView
-                android:id="@+id/imageViewEnvase"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxHeight="200dp"
-                android:maxWidth="200dp"
-                android:src="" />
 
-            <ImageView
-                android:id="@+id/imageViewMedicamento"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxHeight="200dp"
-                android:maxWidth="200dp"
-                android:src="" />
-            -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewEnvase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxHeight="200dp"
+                    android:maxWidth="200dp"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/imageViewMedicamento"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxHeight="200dp"
+                    android:maxWidth="200dp"
+                    tools:ignore="ContentDescription" />
+            </LinearLayout>
         </LinearLayout>
 
 
