--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -13,7 +13,7 @@
         <!-- Aqui se agregan los atributos para el fragment -->
 
         <TextView
-            android:id="@+id/textVname"
+            android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,7 +29,7 @@
             tools:ignore="LabelFor" />
 
         <TextView
-            android:id="@+id/textView3Descripcion"
+            android:id="@+id/textViewDescripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -55,12 +55,11 @@
             android:id="@+id/editTextDoctor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:inputType="textPersonName"
             tools:ignore="LabelFor" />
 
         <TextView
-            android:id="@+id/textViewCheckPoint"
+            android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -116,9 +115,52 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            tools:ignore="UselessLeaf">
+
+            <Spinner
+                android:id="@+id/spinner_checkpoint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:entries="@array/checkpoint"/>
+
+            <TextView
+                android:id="@+id/textViewCheckpoint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lapsos"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewEnvase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/imageViewMedicamento"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="2dp"
+                    tools:ignore="ContentDescription" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -143,31 +185,14 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <Button
+                android:id="@+id/buttonSave"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageViewEnvase"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:maxHeight="200dp"
-                    android:maxWidth="200dp"
-                    tools:ignore="ContentDescription" />
-
-                <ImageView
-                    android:id="@+id/imageViewMedicamento"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:maxHeight="200dp"
-                    android:maxWidth="200dp"
-                    tools:ignore="ContentDescription" />
-            </LinearLayout>
+                android:background="#7fff1e34"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/Save" />
         </LinearLayout>
-
 
     </LinearLayout>
 
