--- a/app/src/main/res/layout/fragment_init.xml
+++ b/app/src/main/res/layout/fragment_init.xml
@@ -3,12 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
     tools:context=".InitFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listViewInit"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
