ListView con imagen lista

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#e6a5a5"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
@@ -11,8 +10,7 @@
         android:id="@+id/imageView2"
         android:layout_width="90dp"
         android:layout_height="60dp"
-        android:contentDescription="TODO"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
+        android:contentDescription="TODO"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
