--- a/app/src/main/res/layout/fragment_init.xml
+++ b/app/src/main/res/layout/fragment_init.xml
@@ -8,5 +8,8 @@
     <ListView
         android:id="@+id/listViewInit"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="2dp"/>
 </FrameLayout>
