--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3fb59d</color>
+    <color name="colorPrimaryDark">#369f87</color>
+    <color name="colorAccent">#ff6481</color>
+    <color name="colorCalendarBackground">#8bb6ac</color>
+    <color name="colorText1">#121833</color>
+    <color name="colorText2">#256b5b</color>
+    <color name="colorText3">#dedede</color>
 </resources>
