--- a/app/src/main/res/layout/fragment_empty.xml
+++ b/app/src/main/res/layout/fragment_empty.xml
@@ -22,9 +22,10 @@
             app:layout_constraintVertical_bias="0.100000024" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView_Empty"
             android:layout_width="214dp"
             android:layout_height="210dp"
+            android:background="#FFFFFF"
             android:contentDescription="@string/emptyPharmacy"
             android:src="@drawable/ic_empty_pharmacy"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_Empty"
             app:layout_constraintVertical_bias="0.100000024" />
 
         <androidx.constraintlayout.widget.Barrier
